tests/paczka1/small_fuzzy/80741151.err
Error in line 2: EeHy A578 85,6
Error in line 8: 6bA A578 98,4
Error in line 9: 6bA A404 81,3
